--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -76,7 +76,7 @@ Clicking the "Return" option will cancel any pre-saving changes made to the grou
 
 ### Example of Group Creation/Management
 
-<img src="/images/Group Management/Group3.png />
+<img src="/images/Group Management/Group3.png" />
 
 ## Protecting Endpoints
 <AccordionGroup>
