--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -161,7 +161,7 @@ You will need:
 ### Removal
 
     The module consists of two files and an entry in the pam configuration. To remove it temporarily, simply remove all references to it in pam.d
-    <img src="/images/pam/linux/pam14.png" />
+    <img src="/images/pam/pam14.png" />
     
     This shows that there is a line in /etc/pam.d/base-auth that needs to be removed.
 
