--- a/Features/Cyber Policies and Activity Logs.mdx
+++ b/Features/Cyber Policies and Activity Logs.mdx
@@ -57,7 +57,7 @@ You will then need to assign users and/or groups to the policy by selecting them
 
 <img src="/images/policy4.png" />
 </Tab>
-<Tab icon="/icons/circle-exclamation-solid.svg" title="Alert" />
+<Tab icon="/icons/circle-exclamation-solid.svg" title="Alert">
 
 ### Alert Policies
 Alert policies are designed to act as a safeguard in the event of scenarios such as:
@@ -115,7 +115,7 @@ Example API requestcurl –location –request POST ‘http://localhost:80/nl3/a
 –header ‘Content-Type: application/json’
 ```
 </Tab>
-<Tab icon="/icons/unlock-keyhole-solid.svg" title="Multi-Approval" />
+<Tab icon="/icons/unlock-keyhole-solid.svg" title="Multi-Approval">
 ### Multi-Approval Policies
 Multi Approval policies enable you to define a secondary approver who must approve any unlock request for the accounts the policy is applied to. The flow works like this:
 
