--- a/Features/Applications and Signing Keys.mdx
+++ b/Features/Applications and Signing Keys.mdx
@@ -12,7 +12,7 @@ Adding an application to the portal will allow for Identity Provider Integration
   className="w-full aspect-video"
   src="https://company.nextlevel3.com/videos/NewApplication&SigningKey.mp4"
 ></video>
-_*Please wait atleast 30 minutes before attempting to validate your application, results may vary, depending on your DNS hostname provider it could take longer to propagate_
+<Tip>Please wait atleast 30 minutes before attempting to validate your application, results may vary, depending on your DNS hostname provider it could take longer to propagate.</Tip>
 
 ### Step 3. Setting up your Company Portal Identity Provider Integrations
 The next step in setting up applications to check lock statuses is to implement Identity Provider Integrations.
