--- a/Features/Native Language Integrations.mdx
+++ b/Features/Native Language Integrations.mdx
@@ -11,7 +11,8 @@ description: 'Node JS, Python, Microsoft .NET Framework'
         <img src="/images/nodejs/nodejs.png" />
         The Next Level3 Node.js integration is designed to be used for your existing applications or sites that are using native Node.js code for authentication. This integration will allow you to easily add Account Protection to any application that leverages Node.js for authentication. 
         
-        Pre-requisites
+        **Pre-requisites**
+
           * Node.js Application
           * Next Level3 Company Account
           * Signing Key created for an application in the Next Level3 Company Portal
@@ -116,11 +117,13 @@ description: 'Node JS, Python, Microsoft .NET Framework'
         ## Python Integration
         The Next Level3 Python integration is designed to be used for your existing applications or sites that are using Python for authentication. This integration will allow you to easily add Account Protection to any application that leverages Python for authentication. 
         
-        Pre-requisites
+        **Pre-requisites**
+
           * Python Application
           * Next Level3 Company Account
           * Signing Key created for an application in the Next Level3 Company Portal
-          * The following Python code sample can be used to integrate an account protection check into your existing authentication flow for custom Python applications that are handling authentication within the application or where a third-party identity provider does not have a supported integration:
+        
+        The following Python code sample can be used to integrate an account protection check into your existing authentication flow for custom Python applications that are handling authentication within the application or where a third-party identity provider does not have a supported integration:
 
 ```Python
         import json
@@ -174,9 +177,16 @@ description: 'Node JS, Python, Microsoft .NET Framework'
       <Tab title="Microsoft .NET Framework">
         <img src="/images/net/net.jpg" />
         ## .NET Integration
+        **Pre-requisites**
+          
+          * Python Application
+          * Next Level3 Company Account
+          * Signing Key created for an application in the Next Level3 Company Portal
+
         The following example shows how it’s possible to perform a PreAuthentication Check with Next Level3 to determine lock status and initiate MFA Push based unlocking. If the status is locked, then a push unlock request is sent to the user’s registered devices.
 
         This code can be used in any application prior to authentication with Active Directory or another IDP.
+
 ```VisualBasic
         using Microsoft.VisualBasic.FileIO;
         using System;
