--- a/Features/Applications and Signing Keys.mdx
+++ b/Features/Applications and Signing Keys.mdx
@@ -17,7 +17,7 @@ Adding an application to the portal will allow for Identity Provider Integration
 ### Step 3. Setting up your Company Portal Identity Provider Integrations
 The next step in setting up applications to check lock statuses is to implement Identity Provider Integrations.
 
-<Card title="Identity Provider Integrations" href="/Features/Identity Service Provider Integrations">
+<Card title="Identity Provider Integrations"  icon="address-card" href="/Features/Identity Service Provider Integrations">
     Integrating Identity Service Providers and Next Level3 Native languages
 </Card>
 
