--- a/Features/Identity Service Provider Integrations.mdx
+++ b/Features/Identity Service Provider Integrations.mdx
@@ -17,7 +17,7 @@ description: 'Auth0, Microsoft Azure, AWS Cognito, and AWS IAM'
 
 ### Identity Provider Integration Instrcutions
   <AccordionGroup>
-      <Accordion title="Auth0">
+      <Accordion title="Auth0" icon="star">
 <img src="/images/auth0/auth0.png" />
 ## Auth0 Integration
 The Next Level3 Auth0 integration is designed to be used for any of your existing applications or sites which are using Auth0 for authentication. This integration will allow you to easily add Account Protection to any application that leverages Auth0 for authentication.
@@ -183,7 +183,7 @@ Reference:
 
 [https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html)
       </Accordion>
-      <Accordion title="Microsoft Azure AD B2C" href="/Tabs/MAAD">
+      <Accordion title="Microsoft Azure AD B2C" icon="windows">
 ## Microsoft Azure AD B2C Integration
 <img src="/images/microsoft b2c/azure1.png" />
 The Next Level3 Azure AD B2C integration is designed to be used for any of your existing applications or sites which are using Azure AD for authentication. This integration will allow you to add Account Protection for any application which leverages Azure AD B2C for authentication. 
@@ -240,7 +240,7 @@ References:
 
 [https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html)
       </Accordion>
-      <Accordion title="Microsoft Azure AD and O365" href="/Tabs/MAADO365">
+      <Accordion title="Microsoft Azure AD and O365" icon="windows">
 ## Microsoft Azure AD and O365 Integration
 <img src="/images/microsoft b2c/azure1.png" />
 This section will walk you through the required setup and configuration steps needed to enable the Next Level3 Cloud Identity solution in a Microsoft online environment. These steps include setting up and configuring a Microsoft AD FS Farm (if one does not already exist), setting up and configuring the Next Level3 Cloud Identity Account Protection Check by using a Microsoft AD FS Risk Assessment Model Plugin. If you have already federated your Microsoft Online services with AD FS, skip the pre-requisites and go directly to the plugin installation and setup.
@@ -560,7 +560,7 @@ References:
 
 https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
       </Accordion>
-      <Accordion title="AWS Cognito" href="/Tabs/AWSCog">
+      <Accordion title="AWS Cognito" icon="aws">
 <img src="/images/aws cognito/cognito1.png" />
 
 ## AWS Cognito Integration
@@ -635,7 +635,7 @@ References:
 
 https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
       </Accordion>
-      <Accordion title="AWS IAM">
+      <Accordion title="AWS IAM" icon="aws">
 <img src="/images/awsiam/awsiam.png" />
 ## AWS IAM Integration
 The Next Level3 AWS IAM integration is designed to be used for your existing applications or sites that are using AWS IAM for authentication. This integration will allow you to easily add Account Protection to any application that leverages AWS IAM for authentication. 
@@ -812,7 +812,7 @@ https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
 ### Supported Native Language Integrations
 For more information about integrating Cloud Identity JIT Access into other applications, refer to the following page:
 
-<Card title="Native Language Integrations" href="/Features/Native Language Integrations">
+<Card title="Native Language Integrations" icon="code" href="/Features/Native Language Integrations">
 Node JS, Python, and Microsoft .NET Framework
 </Card>
 
@@ -820,6 +820,6 @@ Node JS, Python, and Microsoft .NET Framework
 
 Next, you will need to set up Next Level Cloud Identity JIT Access for the endpoints, users, and groups that are associated with your application(s).
 
-<Card title="Users, Groups, and Enpoints" href="/Features/Users, Groups, and Endpoints">
+<Card title="Users, Groups, and Enpoints" icon="user" href="/Features/Users, Groups, and Endpoints">
   Endpoint, User, and Group Management
 </Card>
