--- a/Features/Native Language Integrations.mdx
+++ b/Features/Native Language Integrations.mdx
@@ -7,7 +7,7 @@ description: 'Node JS, Python, Microsoft .NET Framework'
       Next Level3 Supports integration directly in multiple native languages. To integrate Cloud Identity JIT Access into your application, refer to the following examples.
 
     <Tabs>
-      <Tab title="Node JS">
+      <Tab title="Node JS" icon="node-js">
         <img src="/images/nodejs/nodejs.png" />
         The Next Level3 Node.js integration is designed to be used for your existing applications or sites that are using native Node.js code for authentication. This integration will allow you to easily add Account Protection to any application that leverages Node.js for authentication. 
         
@@ -112,7 +112,7 @@ description: 'Node JS, Python, Microsoft .NET Framework'
         };
 ```
       </Tab>
-      <Tab title="Python">
+      <Tab title="Python" icon="python">
         <img src="/images/python/python.png" />
         ## Python Integration
         The Next Level3 Python integration is designed to be used for your existing applications or sites that are using Python for authentication. This integration will allow you to easily add Account Protection to any application that leverages Python for authentication. 
@@ -174,7 +174,7 @@ description: 'Node JS, Python, Microsoft .NET Framework'
           ### Code for unlocked or unprotected accounts 
 ```
       </Tab>
-      <Tab title="Microsoft .NET Framework">
+      <Tab title="Microsoft .NET Framework" icon="windows">
         <img src="/images/net/net.jpg" />
         ## .NET Integration
         **Pre-requisites**
