--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -22,10 +22,10 @@ The "Actions" button in the top right corner, allows administrators to add users
 After a user has been added they will have the following account set up options:
 
 <CardGroup>
-    <Card title="Desktop Browser" href="/Desktop User Guide" icon="https://fontawesome.com/icons/desktop?f=classic&s=solid">
+    <Card title="Desktop Browser" href="/Desktop User Guide" icon="desktop">
     Signing into the Company Portal using a web browser.
     </Card>
-    <Card title="Mobile Device Application" href="/Mobile User Guide" icon="https://fontawesome.com/icons/mobile-screen-button?f=classic&s=solid">
+    <Card title="Mobile Device Application" href="/Mobile User Guide" icon="mobile-screen-button">
     Signing into the company portal using the Next Level3 Mobile app.
     </Card>
 </CardGroup>
@@ -80,7 +80,7 @@ Clicking the "Return" option will cancel any pre-saving changes made to the grou
 
 ## Protecting Endpoints
 <AccordionGroup>
-    <Accordion title="Windows" icon="/icons/windows">
+    <Accordion title="Windows" icon="windows">
 ## Windows
 
 ### Prerequisites
@@ -123,7 +123,7 @@ You will need:
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
     </Accordion>
-    <Accordion title="Linux" icon="/icons/linux">
+    <Accordion title="Linux" icon="linux">
 ## Linux
 
 ### Prerequisites
@@ -190,7 +190,7 @@ You will need:
     "GroupTry": [ "wheel", "staff" ]
 ```
     </Accordion>
-    <Accordion title="MacOS" icon="/icons/apple">
+    <Accordion title="MacOS" icon="apple">
     ## Apple... Coming soon!
     
     </Accordion>
@@ -200,7 +200,7 @@ You will need:
 
 Once you have set up your integrations, the next step is utilizing the Activity Log and Cyber Policy features.
 
-<Card title="Activity Logs and Cyber Policies" href="/Features/Cyber Policies and Activity Logs">
+<Card title="Activity Logs and Cyber Policies" href="/Features/Cyber Policies and Activity Logs" icon="user-lock">
   Monitoring Activity and Managing Policies
 </Card>
 
