--- a/Desktop User Guide.mdx
+++ b/Desktop User Guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Getting Started - Company Portal'
+title: 'Desktop User Guide'
 description: 'Start Protecting your Identity Today'
 ---
 ### Getting Started
@@ -23,6 +23,6 @@ To filter the dashboard view you can edit the filters listed at the top of the p
 ### Step 2. Setting up your Company Portal Applications and Signing Keys
 After signing into the portal and pairing your devices, the next step is setting up your companies applications and signing keys.
 
-<Card title="Applications and Signing Keys" href="/Features/Applications and Signing Keys"> 
+<Card title="Applications and Signing Keys" icon="shield" href="/Features/Applications and Signing Keys"> 
   Protecting Applications, Domain validation, and Key Management
 </Card>
