--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -37,14 +37,14 @@ Committed to delivering reliable security solutions, Next Level3's Just-In-Time 
 <CardGroup cols={2}>
   <Card
     title="Mobile Devices"
-    icon="/icons/mobile-screen-button-solid"
+    icon="mobile-screen-button"
     href="/Mobile User Guide"
   >
     Supports iOS and Android devices.
   </Card>
   <Card
     title="Desktop Browser"
-    icon="/icons/desktop-solid"
+    icon="desktop"
     href="/Desktop User Guide"
   >
     Access the company portal on your PC.
