--- a/Features/Account Setup.mdx
+++ b/Features/Account Setup.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Application and Identity Security'
-description: 'Start Protecting your Applications and Identity Today'
+title: 'Setting  up  your  Account'
+description: 'Start  Protecting  your  Applications  and  Identity  Today'
 ---
 
 The first step in setting up your Next Level3 Company portal is to register your company. This will allows you to securing your applications, set up identity provider integrations, manage users and groups, view access activity, create cyber policies, use native language integrations, and implement pluggable authentication modules.
 
-## Registering your Company
+## Registering  your  Company
 
 <video
   controls
