--- a/Features/Enpoint Protection.mdx
+++ b/Features/Enpoint Protection.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Enpoint Protection'
-description: 'Configuring enpoint security'
+title: 'Endpoint  Protection'
+description: 'Configuring  Endpoint  Security'
 ---
 
 A pluggable authentication module (PAM) allows programs that rely on authentication to be written independently of the underlying authentication scheme. Next Level3 Cloud Identity JIT Access allows you to protect your endpoints by securing them at the initial user access point. If you enable this feature for a Windows, Linux, or MacOS device, you will have the ability to enable and disable access and manage who has access to that endpoint. This feature is available for Windows, Linux, and MacOS operating systems and below are the steps to enable it.
@@ -17,7 +17,7 @@ You will need:
     * Access as ‘administrator’ on the system that the module will be installed on
     * Users available for testing.
 
-### Standard Installation
+### Standard  Installation
     
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
@@ -44,7 +44,7 @@ You will need:
 
     After running the above commands you will need to restart your device for the changes to take place.
 
-    ### Additional Configuration
+    ### Additional  Configuration
 
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
@@ -60,7 +60,7 @@ You will need:
     * Access as ‘root’ (directly or via su/sudo) on the system that the module will be installed on.
     * Users available for testing.
 
-### Standard Installation
+### Standard  Installation
 
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
@@ -98,7 +98,7 @@ You will need:
         - SuSE: /usr/lib64/security
         - Ubuntu: /lib/x86_64-linux-gnu/security
 
-### Additional Configuration
+### Additional  Configuration
 
     There are three additional settings that you can change by editing the configuration file. By default this is installed as /etc/nextlevel3.json. The file created by the sample installation is below:
     <img src="/images/pam/pam15.png" />
@@ -117,7 +117,7 @@ You will need:
 ```
     </Accordion>
     <Accordion title="MacOS" icon="apple">
-    ## Apple... Coming soon!
+    ## Apple...  Coming  Soon!
     
     </Accordion>
 </AccordionGroup>
