--- a/Features/Integrating your Identity Provider.mdx
+++ b/Features/Integrating your Identity Provider.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Integrating your Identity Provider'
-description: 'Supports Auth0, Microsoft Azure, AWS Cognito, and AWS IAM identity providers'
+title: 'Integrating  your  Identity  Provider'
+description: 'Supports  Auth0,  Microsoft  Azure,  AWS  Cognito,  and  AWS  IAM  Identity  Providers'
 ---
-## Identity Provider Integration
-  Next Level3 supports integrations to a variety of best in class identity providers. The following section outlines the steps required to setup and configure the integration for each of these providers. 
+## Identity  Provider  Integration
+  Next Level3 supports integrations to a variety of best in class identity providers. The video below provides an example of how identity provider integrations work.
 
-### How identity Providers are Integrated:
+### How  Identity  Providers  are  Integrated:
 
   <video
   controls
@@ -13,13 +13,13 @@ description: 'Supports Auth0, Microsoft Azure, AWS Cognito, and AWS IAM identity
   src="https://company.nextlevel3.com/videos/NL3AmazonCognitoIntegration.mp4"
   ></video>
   
-  To get started first choose the identity provider your application uses and then follow the instructions to enable Next Level3 Cloud Identity JIT Access for that provider.
+The instructions below provide the steps required to setup and configure the integration for each of these providers. To get started first choose the identity provider your application uses and then follow the instructions to enable Next Level3 Cloud Identity JIT Access for that provider.
 
-### Identity Provider Integration Instrcutions
+### Identity  Provider  Integration  Instructions
   <AccordionGroup>
       <Accordion title="Auth0" icon="star">
 <img src="/images/auth0/auth0.png" />
-## Auth0 Integration
+## Auth0  Integration
 The Next Level3 Auth0 integration is designed to be used for any of your existing applications or sites which are using Auth0 for authentication. This integration will allow you to easily add Account Protection to any application that leverages Auth0 for authentication.
 
 **Pre-requisites**
@@ -28,9 +28,9 @@ The Next Level3 Auth0 integration is designed to be used for any of your existin
 * Next Level3 Company Account
 * Signing Key created for an application in the Next Level3 Company Portal
 
-### Adding Next Level3 Custom Auth0 Action
+### Adding  Next  Level3  Custom  Auth0  Action
 The first step to add an NL3 Account Protection Check to an existing application using Auth0 for authentication is to add a custom action which will then be added to your existing login flow.
-### Adding an Auth0 Custom Action
+### Adding  an  Auth0  Custom  Action
 a. After logging into the Auth0 management portal, navigate to ‘Actions -> Library’ from the main menu and click the “Build Custom” button to build a custom action.
 <img src="/images/auth0/auth0 pic 1.png" />
 b. Enter the following Information (replacing myApplication with the name of your application) in the Custom Action form and click Create.
@@ -184,7 +184,7 @@ Reference:
 [https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html)
       </Accordion>
       <Accordion title="Microsoft Azure AD B2C" icon="windows">
-## Microsoft Azure AD B2C Integration
+## Microsoft  Azure  AD  B2C  Integration
 <img src="/images/microsoft b2c/azure1.png" />
 The Next Level3 Azure AD B2C integration is designed to be used for any of your existing applications or sites which are using Azure AD for authentication. This integration will allow you to add Account Protection for any application which leverages Azure AD B2C for authentication. 
 
@@ -194,7 +194,7 @@ The Next Level3 Azure AD B2C integration is designed to be used for any of your 
   * Next Level3 Company Account
   * Signing Key created for an application in the Next Level3 Company Portal
 
-### Enabling NEXT LEVEL3 AZURE AD B2C Custom Policy to SIGN IN
+### Enabling  Next  Level3  Azure  AD  B2C  Custom  Policy  to  Sign  In
 The first step to add an NL3 Account Protection Check to an existing application that is using Azure AD B2C for authentication is to create a custom policy to add the check to your existing login flow. Unless you are very familiar with Azure AD B2C policies and user journeys, we recommend downloading the starter packs from here: GitHub project.
 
 For most of you, assuming you have already implemented Azure AD B2C, you may already be familiar with the policies you are using and you can start with those policies.
@@ -241,7 +241,7 @@ References:
 [https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html)
       </Accordion>
       <Accordion title="Microsoft Azure AD and O365" icon="windows">
-## Microsoft Azure AD and O365 Integration
+## Microsoft  Azure  AD  and  O365  Integration
 <img src="/images/microsoft b2c/azure1.png" />
 This section will walk you through the required setup and configuration steps needed to enable the Next Level3 Cloud Identity solution in a Microsoft online environment. These steps include setting up and configuring a Microsoft AD FS Farm (if one does not already exist), setting up and configuring the Next Level3 Cloud Identity Account Protection Check by using a Microsoft AD FS Risk Assessment Model Plugin. If you have already federated your Microsoft Online services with AD FS, skip the pre-requisites and go directly to the plugin installation and setup.
 
@@ -251,13 +251,13 @@ This section will walk you through the required setup and configuration steps ne
   * Choose Option A or B
     * Option A – use Option A if you want to install and configure AD FS yourself
     * Option B if you want to use an ARM template to set up an AD FS farm in Azure, and skip this step altogether if you already have an AD FS Server Farm 2016 or later.
-### Option A - Install and Configure AD FS on Windows Server 2022 or 2019 on-premises
+### Option  A  -  Install  and  Configure  AD  FS  on  Windows  Server  2022  or  2019  on-premises
 Installation and configuration of AD FS on Windows Service 2022 or 2019 is the first step. This can be done in an on premise or cloud hosted environment depending on your specific needs. To get started with this process follow the documentation found here:
 **GUIDE FOR INSTALLATION, CONFIGURATION, AND DEPLOYMENT**
 * [https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/windows-server-2012-r2-ad-fs-deployment-guide](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/windows-server-2012-r2-ad-fs-deployment-guide)
 * [https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/deploying-a-federation-server-farm](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/deploying-a-federation-server-farm)
 * [https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/deploying-federation-server-proxies](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/deploying-federation-server-proxies)
-### Option B - Install and Configure AD FS in Azure
+### Option  B  -  Install  and  Configure  AD  FS  in  Azure
 **GUIDE FOR DEPLOYING IN AZURE INCLUDING ARM TEMPLATE**
 _skip to “Step-by-step Instructions for Using ARM Template to Deploy AD FS Farm” for automated setup instructions_
       
@@ -433,7 +433,7 @@ Pre-requisite 3. Configure AD FS for Single Sign-On
   - Finally, click “Configure”.
 After the domain is federated with AD FS, enable NL3 Account Protection using the Microsoft AD FS Risk Assessment Model Plugin and sample code provided by NL3.
 
-## Install Microsoft AD FS Risk Assessment Model Plugin for the Account Protection Check.
+## Install  Microsoft  AD  FS  Risk  Assessment  Model  Plugin  for  the  Account  Protection  Check.
   - Follow the instructions in the following GitHub repository in the README.md file:
     - [https://github.com/Next-Level3/nl3-adfs-plugin](https://github.com/Next-Level3/nl3-adfs-plugin)
     - When filling out the appConfig.csv file, use “urn:federation:Microsoft” without quotes for the LookupKey associated with the AppName and SigningKey you create in the Next Level3 Company Portal for Microsoft Online services and applications.
@@ -441,7 +441,7 @@ After the domain is federated with AD FS, enable NL3 Account Protection using th
   - Enable users for account protection in the Next Level3 Company Portal. Make sure to use the fully qualified user account (e.g., \<username\>@\<subdomain\>.\<domain\>.com).
 _**It may be possible to use other SAML Identity Providers if the SAMLp protocol is supported.**_
   
-## Instructions for Third-party SAMLp providers
+## Instructions  for  Third-party  SAMLp  providers
 While the following instructions favor AD FS, they should work with any identity provider that supports SAMLp which has differences from the regular SAML protocol. Compatible identity providers will support “SAML 2.0 compliant SP-Lite profile-based Identity Provider” standards.
 
 [https://learn.microsoft.com/en-us/azure/active-directory/hybrid/how-to-connect-fed-saml-idp](https://learn.microsoft.com/en-us/azure/active-directory/hybrid/how-to-connect-fed-saml-idp)
@@ -563,7 +563,7 @@ https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
       <Accordion title="AWS Cognito" icon="aws">
 <img src="/images/aws cognito/cognito1.png" />
 
-## AWS Cognito Integration
+## AWS  Cognito  Integration
 The Next Level3 AWS Cognito integration is designed to be used for your existing applications or sites that are using AWS Cognito for authentication. This integration will allow you to easily add Account Protection to any application that leverages AWS Cognito for authentication.
 
 **Pre-requisites**
@@ -572,7 +572,7 @@ The Next Level3 AWS Cognito integration is designed to be used for your existing
   * Next Level3 Company Account
   * Signing Key created for an application in the Next Level3 Company Portal
 
-### Account Protection
+### Account  Protection
 The first step to add an NL3 Account Protection Check to an existing application that uses Amazon Cognito User Pools for authentication is to create a Lambda function that performs the lock check. Here is some sample Python code:
 ```Python
 import json
@@ -637,14 +637,14 @@ https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
       </Accordion>
       <Accordion title="AWS IAM" icon="aws">
 <img src="/images/awsiam/awsiam.png" />
-## AWS IAM Integration
+## AWS  IAM  Integration
 The Next Level3 AWS IAM integration is designed to be used for your existing applications or sites that are using AWS IAM for authentication. This integration will allow you to easily add Account Protection to any application that leverages AWS IAM for authentication. 
 
 Pre-requisites
   * AWS Account Leveraging IAM Users or Roles*
   * Next Level3 Company Account
   * Signing Key created for an application in the Next Level3 Company Portal
-### Account Protection
+### Account  Protection
 The AWS IAM integration is slightly different from other integrations. AWS does not provide access to the login flow for IAM users or roles so there is no way to directly implement the lock check. However, via Amazon EventBridge, we can trigger a lock check on login and, if the account is locked, apply a “Deny All” managed policy, a “Revoke Sessions” policy, and even disable any active access keys. If the account is unlocked, the event would ensure that the policies are removed and the access keys that were most recently used are re-activated. Please be aware that there is a small delay between the login event and any policy being applied or removed. Also, if the Amazon EventBridge event is not triggered correctly, the lock check will not be performed and no policy will be applied.
 
 The first step for setting up this integration is to create a Lambda function that can perform the lock check when a login event occurs and apply or remove the policies. Here is some sample code for a regular IAM user written in Python:
