--- a/Features/User Management.mdx
+++ b/Features/User Management.mdx
@@ -1,19 +1,19 @@
 ---
-title: 'Setting up End Users'
+title: 'Setting  up  End  Users'
 description: 'Manage the users and groups that have access to your applications'
 ---
 
 In order to view and monitor access for company applications you will need to configure your users and groups for application access.
 
-## User Management
+## User  Management
 
 There are two methods for adding users to the company portal the opt-in method and automatic enrollment method.
 
-### Opt In Method
+### Opt  In  Method
 If you wish to allow users to self service opt in and enable Next Level3 protection for their accounts you must provide the users with a link 
 
  
-#### Step 1 - Create a JWT for the User
+#### Step  1  -  Create  a  JWT  for  the  User 
 The User Enablement process is fairly simple. Somewhere in your application, you need to generate a JSON Web Token \(JWT\) that includes the login name for the user and a few other properties including an expiration claim \(more details below\). The JWT will need to be signed in your backend application code with the NL3 Domain Key associated with your application. The signature will be verified on our end to ensure the request for enablement is coming from your application. Here is a sample header and payload for the JWT:
 
 **Header**
@@ -26,12 +26,12 @@ The User Enablement process is fairly simple. Somewhere in your application, you
 {"iss":"www.myapplication.com","iat":1642525200,"exp":1674061200,"aud":"auth.nextlevel3.com","sub":"myuser@myapplication.com"}
 ```
 
-#### Step 2 - Add Redirect to Next LEVEL3
+#### Step  2  -  Add  Redirect  to  Next  Level3
 
 The next step is to add an NL3 User Enablement workflow in your application. This could be something as simple as a link that says, “Click here to enable NL3 protection”, or a checkbox on the user’s profile screen. However you choose to implement the workflow, enablement occurs when your application redirects the user or opens a new tab or browser window and passes the JWT created in Step 1 to our website in the “auth-token” query parameter e.g. \(https://cloud.nextlevel3.com?auth-token=\*JWT*/\) created in Step 1. Then the user will login with an existing NL3 account or signup for a new one. This account will allow the user to link their application login with an NL3 account that they can use to manage their protected account lock statuses with.
 
 
-### Adding Users Manually
+### Adding  Users  Manually
 All users are managed from the Company Portal from the "Users" tab.
 
 <img src="/images/User Management/User1.png" />
@@ -44,10 +44,10 @@ When a user is unable to access their account through any of their authorized de
 
 The "Actions" button in the top right corner, allows administrators to add users either manually or imported via .csv and view previous user imports.
 
-### Actions Menu
+### Actions  Menu
 <img src="/images/User Management/User3.png" />
 
-## Group Management
+## Group  Management
 Groups are managed and created in the Group Manager pane:
 
 <img src="/images/Group Management/Group1.png" />
@@ -66,6 +66,6 @@ Once the administrator is finished, clicking the "Save" button will save the cha
 
 Clicking the "Return" option will cancel any pre-saving changes made to the group and will bring you back to the Group management pane.
 
-### Example of Group Creation/Management
+### Example  of  Group  Creation/Management
 
 <img src="/images/Group Management/Group3.png" />
