--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Introduction'
-description: 'Next Level3 Documentation'
+description: 'Next  Level3  Documentation'
 ---
-## Welcome to Next Level3 Cloud Identity JIT Access
+## Welcome  to  Next  Level3  Cloud  Identity  JIT  Access
 
 Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solution tailored to provide an impenetrable shield for your AWS environment against unauthorized intrusion and potential security breaches with a system that incorporates identity verification protocols, MultiFactor Authentication, and dynamic access controls.
 
@@ -19,58 +19,58 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
 
 <CardGroup cols={2}>
   <Card
-    title="Accessing your Account"
+    title="Setting  up  your  Account"
     icon="user"
     href="/Features/Account Setup"
   >
     Registering your company to the NextLevel3 Company Portal
   </Card>
   <Card
-    title="Securing your Applications"
+    title="Securing  your  Applications"
     icon="shield"
     href="/Features/Securing your Applications"
   >
-    Adding applications to your Company Portal
+    Adding applications to the portal
   </Card>
   <Card
-    title="Setting up End Users"
+    title="Setting  up  End  Users"
     icon="mobile-screen-button"
     href="/Features/User Management"
   >
-    Manage the users and groups that have access to your applications.
+    Managing user and group access
   </Card>
   <Card
-    title="Protecting your Endpoints"
+    title="Protecting  your  Endpoints"
     href="/Features/Endpoint Protection"
     icon="desktop">
-    Protect your endpoint with Next Level3's pluggable authentication modules
+    Protecting your endpoint with Next Level3 Authentication
   </Card>
   <Card
-    title="Integrating your Identity Provider"
+    title="Integrating  your  Identity  Provider"
     href="/Features/Integrating your Identity Provider"
     icon="address-card"
     >
-    Auth0, Microsoft Azure, AWS Cognito, and AWS IAM integrations support
+    Auth0, Microsoft Azure AD, AWS Cognito, and AWS IAM Integration Support
   </Card>
   <Card
-    title="Integrating NL3 code to your Application"
+    title="Integrating  NL3  Authentication"
     href="/Features/Native Language Integrations"
     icon="code"
     >
-    NL3 integrations supports Node JS, Python, and Microsoft .NET Framework
+    Integrating NL3 Authentication directly to your application
+  </Card>
+  <Card 
+    title="Cyber  Policies  and  Monitoring  Activity" 
+    href="/Features/Cyber Policies and Activity Logs" 
+    icon="user-lock"
+    >
+    Monitoring account activity and creating cyber policies in the portal
   </Card>
   <Card
-    title="Using Next Level3 API"
+    title="Using  Next  Level3  API"
     href="https://api.nextlevel3.com/nl3/api/swagger-ui/index.html#/"
     icon="code"
     >
     API documentation
-  </Card>
-  <Card 
-    title="Creating your Cyber Policies and Monitoring Activity" 
-    href="/Features/Cyber Policies and Activity Logs" 
-    icon="user-lock"
-    >
-    Monitoring Activity and Managing Policies
   </Card>
 </CardGroup>
