--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -53,7 +53,7 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     Auth0, Microsoft Azure AD, AWS Cognito, and AWS IAM Integration Support
   </Card>
   <Card
-    title="Integrating  NL3  Authentication"
+    title="Native Language Integrations"
     href="/Features/Native Language Integrations"
     icon="code"
     >
@@ -71,6 +71,6 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     href="https://api.nextlevel3.com/nl3/api/swagger-ui/index.html#/"
     icon="code"
     >
-    API documentation
+    API documentation website
   </Card>
 </CardGroup>
