--- a/Features/Cyber Policies and Activity Logs.mdx
+++ b/Features/Cyber Policies and Activity Logs.mdx
@@ -5,7 +5,7 @@ description: 'Managing  Policies  and  Monitoring  Activity'
 
 ## Cyber  Policies
 
-Cyber Policies are used to control access to application accounts and managed that access for a companies users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. This document will outline each of the Cyber Policy types available today and will define how to create, use, and manage cyber policies using the Next Level3 Company Portal.
+Cyber Policies are used to control access to application accounts and manage that access for your company's users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. This document will outline each of the Cyber Policy types available to you and will define how to create, use, and manage cyber policies using the Next Level3 Company Portal.
 
 ### Accessing  Cyber  Policies
 Requirements: Admin Level Next Level3 Company Account Access.
